# prima-rust-workshop-23

./: .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.yml
assets/: System architecture.drawio  database.drawio
proto/: schema.proto
schema/: schema.proto
store/: .env  .env.test  Cargo.toml  Dockerfile  Makefile.toml  docker-entrypoint.sh
store/migrations/: 20230310112000_store.sql
store/src/: config.rs  main.rs
store/src/database/: mod.rs
store/src/database/tables/: article.rs  customer.rs  mod.rs  order.rs  order_article.rs
store/src/service/: error.rs  mod.rs
tools/: articles.csv  customers.csv  generate-fixtures.py  get-users.py
user-api/: .env  .env.test  Cargo.toml  Dockerfile  Makefile.toml  build.rs  schema.graphql
user-api/src/: config.rs  main.rs
user-api/src/graphql/: mod.rs  request_params.rs  resolvers.rs  schema.rs  types.rs
user-api/src/graphql/resolvers/: articles.rs  order.rs  submit_order.rs
user-api/src/graphql/types/: article.rs  article_in_order.rs  decimal.rs  naive_date_time.rs  order.rs  order_article.rs  order_status.rs  order_submission.rs  uuid.rs
user-api/src/proto/: error.rs  mod.rs  store_client.rs
user-api/src/proto/store_client/: types.rs
user-api/src/proto/store_client/types/: article.rs  auth_response.rs  order.rs
user-api/src/web/: auth_api.rs  graphql_api.rs  mod.rs  session.rs
