[package]
name = "store"
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
chrono = "^0.4"
email_address = "^0.2"
envy = "^0.4.2"
hex = "^0.4"
prost = "^0.11"
prost-types = "^0.11"
rust_decimal = "^1.28"
serde = { version = "^1", features = [ "derive" ] }
sha2 = "^0.10"
sqlx = { version = "^0.6", features = [
    "chrono",
    "decimal",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = "^1.0"
tokio = { version = "^1.26", features = [ "rt-multi-thread", "macros" ] }
tonic = "^0.8"
tracing = "^0.1"
tracing-subscriber = "^0.2"
uuid = { version = "^1", features = ["v4"] }

[build-dependencies]
tonic-build = "^0.8"

[dev-dependencies]
pretty_assertions = "^1.2.1"
rust_decimal_macros = "^1.26"
