[package]
name = "user-api"
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "^0.7", features = [ "cookie-session" ] }
actix-web = "^4.3"
anyhow = "^1.0"
async-graphql = { version = "^5.0", features = ["chrono", "decimal", "uuid"] }
async-graphql-actix-web = "^5.0"
chrono = "^0.4"
email_address = "^0.2"
envy = "^0.4.2"
prost = "^0.11"
prost-types = "^0.11"
rust_decimal = "^1.28"
serde = { version = "^1", features = [ "derive" ] }
serde_json = "^1.0"
thiserror = "^1.0"
tonic = "^0.8"
tracing = "^0.1"
tracing-subscriber = "^0.2"
uuid = { version = "^1", features = ["v4"] }

[build-dependencies]
tonic-build = "^0.8"

[dev-dependencies]
pretty_assertions = "^1.2.1"
rust_decimal_macros = "^1.26"
